# EmberBolean

./: BUILD_FOR_HOUDINI.md  BUILD_HOUDINI21_WINDOWS.md  BUILD_INSTRUCTIONS.md  BUILD_WINDOWS.md  CMakeLists.txt  CMakeLists_PATCH.cmake  CMakePresets.json  DEFENSIVE_FIXES_SUMMARY.md  EMBER_AUDIT_INTEGRATION_COMPLETE.md  EMBER_Architectural_Standardization_Report.md  EXACTPREDICATES_SURGERY_SUMMARY.md  FIX_SOPPARAMETERS_ERROR.md  HOUDINI21_COMPATIBILITY.md  INTEGRATION_SUMMARY.md  README.md  SOPPARAMETERS_ADDED.md  WINDOWS_BUILD_VERIFIED.md  build.sh  build_for_houdini.sh  build_windows.bat  test_cdt_consistency.cpp  test_compile  test_compile_standalone.cpp  test_harness.cpp  test_windows_compat  test_windows_compat.cpp
backend/: BackendFactory.cpp  BackendFactory.h  CherchiBackend.cpp  CherchiBackend.h  CherchiBackend_stub.cpp  IBooleanBackend.h  KigumiBackend.cpp  KigumiBackend.h  MCUTBackend.cpp  MCUTBackend.h  ManifoldBackend.cpp  ManifoldBackend.h
ember/: CutterDispatch.cpp  CutterDispatch.h  CutterMeshGenerator.cpp  CutterMeshGenerator.h  Diagnostics.h  ExactPredicates.h  ExactPredicates_Indirect.h  IntegerTypes.h  LabelConsistency.cpp  LabelConsistency.h  MeshExport.cpp  MeshExport.h  MeshImport.cpp  MeshImport.h  Parameters.h  Plane.h  PolygonSoup.h  SeamExtract.cpp  SeamExtract.h  ShatterPost.cpp  ShatterPost.h  test_integers  test_integers.cpp
install/include/manifold/: version.h
install/lib/cmake/manifold/: manifoldConfig.cmake  manifoldTargets-release.cmake
pipeline/: EmberPipeline.cpp  EmberPipeline.h  MeshImport_PortabilityFix.h  Stage01_Diagnostic.cpp  Stage01_Diagnostic.h  Stage02_EmbreeBVH.cpp  Stage02_EmbreeBVH.h  Stage02b_PlaneFastPath.cpp  Stage02b_PlaneFastPath.h  Stage03_Intersect.cpp  Stage03_Intersect.h  Stage04_Classify.cpp  Stage04_Classify.h  Stage05_Reconstruct.cpp  Stage05_Reconstruct.h  Stage06_ShatterPost.cpp  Stage06_ShatterPost.h
src/: EmberPlugin.cpp  GU_EmberConverter.cpp  GU_EmberConverter.h  SOPParameters.cpp  SOPParameters.h  SOP_EmberBoolean.cpp  SOP_EmberBoolean.h  src__GU_EmberConverter_additions.h  src__GU_EmberConverter_manifold_additions.cpp
tests/: EmberValidationSuite  EmberValidationSuite.cpp  EmberValidationSuite_SingleThreaded.cpp  VALIDATION_REPORT.md  minimal_test  minimal_test.cpp  test_integer_audit.cpp  test_runner2  test_trimmed
